# tuning-tool

./: .devtool.yaml  .gitignore  .isopy.yaml  Cargo.toml  Cross.toml  Dockerfile  README.md  build  build.rs  coverage  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml
examples/: 12edo2.scl  Seventeen.scl
resources/: 12edo.mid  12edo2.kbm  24edo.mid  24edo2.kbm  24edo2.scl  31edo2-subset.kbm  31edo2.scl
resources/syx/: carlos_super.syx  carlos_super_440.syx
resources/test/: 12edo2-expected-frequencies.txt  22edo2-scala-frequencies.txt  22edo2.kbm  22edo2.scl  24edo2-432-expected-frequencies.txt  31edo2-expected-frequencies.txt  31edo2-subset-expected-frequencies.txt  bohlen-p-expected-frequencies.txt  carlos-super-69-expected-frequencies.txt  carlos-super-zero-expected-frequencies.txt  scala-frequencies.txt
resources/test/scl/: marvel_dipentatonic.scl
resources/test/sevish-tunings-pack/eikosany/: Dekany 1 3 5 11 13.scl  Dekany 1 3 5 7 11.scl  Dekany 1 3 5 7 13.scl  Dekany 1 3 5 7 9.scl  Dekany 1 3 5 9 11.scl  Dekany 1 3 5 9 13.scl  Dekany 1 3 7 9 11.scl  Dekany 1 3 9 11 13.scl  Dekany 1 5 7 9 11.scl  Dekany 1 7 9 11 13.scl  Dekany keymapping.kbm  Eikosany 1 3 5 7 9 11.scl  Hexany 1 3 11 13.scl  Hexany 1 3 5 11.scl  Hexany 1 3 5 13.scl  Hexany 1 3 5 7.scl  Hexany 1 3 5 9.scl  Hexany 1 3 7 11.scl  Hexany 1 3 7 13.scl  Hexany 1 3 7 9.scl  Hexany 1 3 9 11.scl  Hexany 1 3 9 13.scl  Hexany keymapping.kbm
resources/test/sevish-tunings-pack/no-octaves/: 10 ED3.scl  10 EDphi.scl  11 ED3.scl  11 EDphi.scl  12 ED3.scl  12 EDphi.scl  14 ED3.scl  15 ED3.scl  16 ED3.scl  17 ED3.scl  18 ED3.scl  19 ED3 (12 TET Stretched).scl  4 EDphi.scl  5 EDphi.scl  6 EDphi.scl  65 CET.scl  7 EDphi.scl  8 ED3.scl  8 EDphi.scl  88 CET.scl  9 ED3.scl  9 EDphi.scl
resources/test/sevish-tunings-pack/regular-temperaments/: 11 TET Machine[6] 2 2 1 2 2 2.scl  13 TET Father[8] 2 2 1 2 2 1 2 1.scl  15 TET Blackwood[10] 2 1 2 1 2 1 2 1 2 1.scl  16 TET Mavila[7] 2 2 3 2 2 2 3.scl  16 TET Mavila[9] 1 2 2 2 1 2 2 2 2.scl  17 TET Superpyth[12] 1 1 2 1 2 1 1 2 1 2 1 2.scl  202 TET oktone 20 39 6 39 14 39 6 39.scl  22 TET Orwell[9] 2 3 2 3 2 3 2 3 2.scl  22 TET Pajara[10] Static Symmetrical Maj 2 2 3 2 2 2 2 3 2 2.scl  22 TET Pajara[10] Std Pentachordal Maj 2 2 3 2 2 2 3 2 2 2.scl  22 TET Porcupine[7] 3 3 3 4 3 3 3.scl  26 TET Flattone[12] 1 3 1 3 3 1 3 1 3 1 3 3.scl  26 TET Lemba[10] 3 2 3 2 3 3 2 3 2 3.scl  31 TET Meantone[19] 1 2 1 2 2 1 2 2 1 2 1 2 2 1 2 2 1 2 2.scl  313 TET Barbados[9] 53 12 53 12 53 12 53 12 53.scl  46 TET Sensi[11] 5 5 5 2 5 5 5 2 5 5 2.scl  53 TET Orwell[9] 5 7 5 7 5 7 5 7 5.scl  72 TET 12-Adams 12 4 7 3 4 3 9 11 5 5 2 7.scl  99 TET zeus7tri 13 19 13 13 19 13 9.scl  TOP Parapyth12.scl  glummamarvwoo.scl
resources/test/sevish-tunings-pack/world-scales/: 7 on white.kbm  Ancient Greek Archytas Diatonic.scl  Ancient Greek Archytas Enharmonic.scl  Ancient Greek Didymus Chromatic.scl  Ancient Greek Ptolemy Diatonic Ditoniaion.scl  Ancient Greek Ptolemy Diatonic Hemiolion.scl  Ancient Greek.kbm  Bulgarian Bagpipe.kbm  Bulgarian Bagpipe.scl  Chopi Xylophone.kbm  Chopi Xylophone.scl  Indian Raga Bageshri.kbm  Indian Raga Bageshri.scl  Indian Raga Bhairavi.kbm  Indian Raga Bhairavi.scl  Indian Raga Kafi.scl  Indian Raga Todi.scl  Indian Raga Yaman.scl  Indian Shrutis.scl  Indonesian Pelog.scl  Indonesian Slendro.scl  Japanese Hirajoshi.scl  Macedonian Bagpipe.kbm  Macedonian Bagpipe.scl  Scottish Bagpipe.scl  Thai Ranat.scl  Zimbabwe Mbira.scl
src/: approx_eq.rs  args.rs  bulk_dump_reply.rs  bulk_tuning_dump_reply.rs  cent_offset.rs  cents.rs  checksum_calculator.rs  cli.rs  consts.rs  conversion.rs  dump_scala_file.rs  dump_sysex_file.rs  entrypoint.rs  examples.rs  frequencies.rs  frequency.rs  fs.rs  hertz.rs  hex_dump.rs  interval.rs  kbm_file.rs  main.rs  midi_bulk_tuning_dump_reply.rs  midi_note.rs  midi_notes.rs  midi_tuning_bulk_dump_reply.rs  mts_bytes.rs  mts_entry.rs  note.rs  note_change.rs  note_number.rs  notes.rs  num.rs  preset_name.rs  ratio.rs  resources.rs  run.rs  scala.rs  scala_file.rs  scale.rs  (+10 more)
src/midi/: bulk_tuning_dump_reply.rs  checksum_calculator.rs  consts.rs  midi_bulk_tuning_dump_reply.rs  midi_frequency.rs  midi_note.rs  midi_note_number.rs  mod.rs  note_number.rs
src/scala/: fs.rs  mod.rs  note.rs  notes.rs  scale_note.rs  scale_notes.rs  tuning.rs
src/temp/: consts.rs  entrypoint.rs  frequency.rs  midi_note.rs  mod.rs  sysex_event.rs
tuning-tool/: Cargo.toml  build.rs
tuning-tool-derive/: Cargo.toml
tuning-tool-derive-tests/: Cargo.toml
tuning-tool-derive-tests/src/: lib.rs
tuning-tool-derive/src/: lib.rs
tuning-tool-lib/: Cargo.toml
tuning-tool-lib/src/: error.rs  lib.rs  maths.rs  u7.rs
tuning-tool-lib/src/symbolic/: bracket_style.rs  brackets.rs  consts.rs  expression.rs  inner.rs  literals.rs  mod.rs  op.rs  value.rs
tuning-tool-macros/: Cargo.toml
tuning-tool-macros-test/: Cargo.toml
tuning-tool-macros-test/src/: lib.rs
tuning-tool-macros/src/: lib.rs  scale.rs
tuning-tool/src/: approx_eq.rs  args.rs  ascii_char.rs  bulk_dump_reply.rs  cent_offset.rs  cents.rs  checksum.rs  checksum_calculator.rs  chunk_size.rs  cli.rs  coerce.rs  consts.rs  decode_bulk_dump.rs  device_id.rs  devices.rs  dump_tuning_table.rs  equave_ratio.rs  evaluate.rs  evaluation_strategy.rs  examples.rs  experimental.rs  f64_newtype.rs  frequencies.rs  frequency.rs  fs.rs  hex_dump.rs  interval.rs  kbm_file.rs  key.rs  key_frequency_mapping.rs  key_mapping.rs  key_mappings.rs  key_number.rs  keyboard_mapping.rs  keyboard_mapping_source.rs  list_devices.rs  list_ports.rs  lsb.rs  main.rs  midi_input_ex.rs  (+36 more)
