[package]
authors = ["Richard Cook"]
categories = ["multimedia::audio"]
description = "Richard's MIDI Tuning Tool"
edition = "2021"
homepage = "https://github.com/rcook/tuning-tool"
keywords = ["microtuning", "midi"]
license = "MIT"
name = "tuning-tool-lib"
repository = "https://github.com/rcook/tuning-tool.git"
version = "0.0.1"

[dependencies]
thiserror = "1.0.64"
