[package]
authors = ["Richard Cook"]
categories = ["multimedia::audio"]
description = "Richard's MIDI Tuning Tool"
edition = "2021"
homepage = "https://github.com/rcook/tuning-tool"
keywords = ["microtuning", "midi"]
license = "MIT"
name = "tuning-tool-lib"
repository = "https://github.com/rcook/tuning-tool.git"
version = "0.0.3"

[dependencies]
num = "0.4.3"
rust_decimal = "1.40.0"
thiserror = "2.0.18"

[dev-dependencies]
rstest = "0.23.0"
