[package]
authors = ["Richard Cook"]
categories = ["multimedia::audio"]
description = "Richard's MIDI Tuning Tool"
edition = "2021"
homepage = "https://github.com/rcook/tuning-tool"
keywords = ["microtuning", "midi"]
license = "MIT"
name = "tuning-tool-macros-test"
repository = "https://github.com/rcook/tuning-tool.git"
version = "0.0.2"

[dependencies]
tuning-tool-lib = { path = "../tuning-tool-lib" }
tuning-tool-macros = { path = "../tuning-tool-macros" }
