[package]
authors = ["Richard Cook"]
categories = ["multimedia::audio"]
description = "Richard's MIDI Tuning Tool"
edition = "2021"
homepage = "https://github.com/rcook/tuning-tool"
keywords = ["microtuning", "midi"]
license = "MIT"
name = "tuning-tool-macros"
repository = "https://github.com/rcook/tuning-tool.git"
version = "0.0.3"

[dependencies]
proc-macro2 = "1.0.89"
quote = "1.0.37"
syn = "2.0.79"

[lib]
proc-macro = true
