[package]
authors = ["Richard Cook"]
categories = ["multimedia::audio"]
description = "Richard's MIDI Tuning Tool"
edition = "2021"
homepage = "https://github.com/rcook/tuning-tool"
keywords = ["microtuning", "midi"]
license = "MIT"
name = "tuning-tool"
repository = "https://github.com/rcook/tuning-tool.git"
version = "0.0.2"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.5"
include_dir = "0.7.4"
log = "0.4.22"
midly = { version = "0.5.3", features = ["strict"] }
num = "0.4.3"
path-absolutize = "3.1.1"
rstest = "0.23.0"
rust_decimal = "1.36.0"
tuning-tool-lib = { path = "../tuning-tool-lib" }
tuning-tool-macros = { path = "../tuning-tool-macros" }

[build-dependencies]
anyhow = "1.0.89"

[target.'cfg(target_os = "linux")'.dependencies]
midir = { git = "https://github.com/rcook/midir.git", rev = "1d53df7041f3f1bfb642f7ff51b30d2fffae1bc6", features = ["jack"]}

[target.'cfg(not(target_os = "linux"))'.dependencies]
midir = { git = "https://github.com/rcook/midir.git", rev = "1d53df7041f3f1bfb642f7ff51b30d2fffae1bc6" }
