[package]
authors = ["Richard Cook"]
categories = ["multimedia::audio"]
description = "Richard's MIDI Tuning Tool"
edition = "2021"
homepage = "https://github.com/rcook/tuning-tool"
keywords = ["microtuning", "midi"]
license = "MIT"
name = "tuning-tool"
repository = "https://github.com/rcook/tuning-tool.git"
version = "0.0.3"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
env_logger = "0.11.10"
include_dir = "0.7.4"
log = "0.4.29"
midir = { git = "https://github.com/rcook/midir.git", rev = "1d53df7041f3f1bfb642f7ff51b30d2fffae1bc6" }
midly = { version = "0.5.3", features = ["strict"] }
num = "0.4.3"
path-absolutize = "3.1.1"
rstest = "0.26.1"
rust_decimal = "1.40.0"
tempfile = "3.26.0"
tuning-tool-lib = { path = "../tuning-tool-lib" }
tuning-tool-macros = { path = "../tuning-tool-macros" }
which = "8.0.0"

[build-dependencies]
anyhow = "1.0.102"
